included attribution to https://github.com/mojombo/mojombo.github.io

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
       {{ content }}
 
       <div class="footer">
+        <p>Layout forked from <a href="https://github.com/mojombo/mojombo.github.io">https://github.com/mojombo/mojombo.github.io</a></p>
         <div class="contact">
           <p>
           Clayton Flesher<br />
