--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="content-type" content="text/html" charset=utf-8" />
     <title>{{ page.title }}</title>
     <meta name="author" content="Clayton Flesher" />
     <link href="http://feeds.feedburner.com/calvyn82.github.io" rel="alternative" title="Clayton Flesher" type="application/atom+xml" />
