--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html" charset=utf-8" />
     <title>{{ page.title }}</title>
     <meta name="author" content="Clayton Flesher" />
-    <link href="http://feeds.feedburner.com/calvyn82.github.io" rel="alternative" title="Clayton Flesher" type="application/atom+xml" />
+    <link href="http://feeds.feedburner.com/claytonflesher.github.io" rel="alternative" title="Clayton Flesher" type="application/atom+xml" />
 
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -35,8 +35,8 @@
         </div>
         <div class="contact">
           <p>
-          <a href="http://github.com/Calvyn82/">github.com/Calvyn82</a><br />
-          <a href="http://twitter.com/Calvyn82/">twitter.com/Calvyn82</a><br />
+          <a href="http://github.com/claytonflesher/">github.com/claytonflesher</a><br />
+          <a href="http://twitter.com/claytonflesher/">twitter.com/claytonflesher</a><br />
           <p>Layout forked from <a href="https://github.com/mojombo/mojombo.github.io">https://github.com/mojombo/mojombo.github.io</a></p>
           </p>
         </div>
